# Candle-local-AI-Server

./: .gitignore  .gitmodules  CURRENT_ISSUE.md  Cargo.toml  FINAL_SUMMARY.md  GITHUB_RELEASE_GUIDE.md  INSTALLATION_GUIDE.md  README.md  RELEASE_NOTES.md  STATUS.md  TESTING.md  TODO.md  download_models.sh  prepare-release.sh  requirements.txt  server.py  start.sh
cache/: README.md
docs/: TTS-Implementation-Review.md
release-v0.1.0/tts-server/: QUICK_START.md  README.md  VOICE_API.md  download_models.sh
release-v0.1.0/tts-server/data/voices/: index.json
release-v0.1.1/tts-server/: QUICK_START.md
src/: cache.rs  main.rs  tts_engine.rs  vocab.rs  wav_encoder.rs
